--- a/SkolniEvidence/Components/Pages/Counter.razor
+++ b/SkolniEvidence/Components/Pages/Counter.razor
@@ -4,16 +4,16 @@
 
 <h1>Counter</h1>
 
-<p role="status">Current count: @currentCount</p>
+<p role="status">Current count: @Data.GlobalCounterf.GlobalCounter</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
-    private int currentCount = 0;
+
 
     private void IncrementCount()
     {
-        currentCount++;
+        Data.GlobalCounterf.GlobalCounter++;
     }
 }
 
