--- a/SkolniEvidence/Components/_Imports.razor
+++ b/SkolniEvidence/Components/_Imports.razor
@@ -9,3 +9,6 @@
 @using Microsoft.JSInterop
 @using SkolniEvidence
 @using SkolniEvidence.Components
+
+@using SkolniEvidence.Model
+@using SkolniEvidence.Data
