--- a/SkolniEvidence/Components/Layout/NavMenu.razor
+++ b/SkolniEvidence/Components/Layout/NavMenu.razor
@@ -19,6 +19,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/group/add">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Nová třída
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
