form pro noveho studenta

--- a/SkolniEvidence/Components/Pages/Home.razor
+++ b/SkolniEvidence/Components/Pages/Home.razor
@@ -10,7 +10,7 @@
 
 @foreach(var group in groups)
 {
-	<div>@group.Name - @group.Description</div>
+	<div>@group.Name - @group.Description - <a href="/student/add/@group.Id">Nový student</a></div>
 }
 
 
