--- a/SkolniEvidence/Components/Pages/Student/Add.razor
+++ b/SkolniEvidence/Components/Pages/Student/Add.razor
@@ -22,7 +22,7 @@
     <div class="mb-3">
         <label class="form-label">
             Pohlaví:
-            <InputCheckbox @bind-Value="student.Male" class="form-control" />
+            <InputCheckbox @bind-Value="student.Male"  />
         </label>
     </div>
 
