--- a/SkolniEvidence/Components/Pages/Student/Add.razor
+++ b/SkolniEvidence/Components/Pages/Student/Add.razor
@@ -21,7 +21,7 @@
 
     <div class="mb-3">
         <label class="form-label">
-            Pohlaví:
+            Muž:
             <InputCheckbox @bind-Value="student.Male"  />
         </label>
     </div>
