--- a/SkolniEvidence/Components/Pages/Home.razor
+++ b/SkolniEvidence/Components/Pages/Home.razor
@@ -1,4 +1,7 @@
 ﻿@page "/"
+
+@using Microsoft.EntityFrameworkCore
+
 @inject ApplicationDbContext context
 
 
@@ -10,7 +13,7 @@
 
 @foreach(var group in groups)
 {
-	<div>@group.Name - @group.Description - <a href="/student/add/@group.Id">Nový student</a></div>
+	<div>@group.Name - @group.Description - @group.Students.Count() - <a href="/student/add/@group.Id">Nový student</a></div>
 }
 
 
@@ -20,6 +23,7 @@
 	protected override void OnInitialized()
 	{
 		groups = context.Groups
+					.Include(trida => trida.Students)
 					.OrderByDescending(trida => trida.Name)
 					.ToList();
 	}
