--- a/SkolniEvidence/Components/Pages/Student/Add.razor
+++ b/SkolniEvidence/Components/Pages/Student/Add.razor
@@ -1,11 +1,13 @@
 ﻿@page "/student/add/{id:int}"
 
+@attribute [Authorize]
 @inject ApplicationDbContext context
 @inject NavigationManager nav
 
 <h3>Nový student</h3>
 
 <EditForm Model="student" OnSubmit="Save">
+    <DataAnnotationsValidator />
     <div class="mb-3">
         <label class="form-label">
             Jméno:
@@ -31,6 +33,10 @@
             Datum narození:
             <InputDate @bind-Value="student.BirthDate" class="form-control" />
         </label>
+    </div>
+
+    <div>
+		<ValidationSummary />   
     </div>
 
     <div>
