--- a/SkolniEvidence/Components/Layout/NavMenu.razor
+++ b/SkolniEvidence/Components/Layout/NavMenu.razor
@@ -25,6 +25,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/student/list">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Studenti
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="counter">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
