migrace profile photo

--- a/SkolniEvidence/Components/Pages/Student/FilteredList.razor
+++ b/SkolniEvidence/Components/Pages/Student/FilteredList.razor
@@ -31,6 +31,8 @@
 								|| stud.Group.Name.Contains(search_term))
 						.ToList();
 
+						//context.Students.FromSqlRaw("")
+
 		search_term = "";
 	}
 }
